# website-kerdik

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/migrations/2026-01-11-100000_create_admin_sessions/: down.sql  up.sql
backend/migrations/2026-01-25-120000_create_offers_table/: down.sql  up.sql
backend/migrations/2026-01-25-130000_create_messages_archive/: down.sql  up.sql
backend/migrations/2026-02-04-165213-0000_add_location_to_offers/: down.sql  up.sql
backend/migrations/2026-02-08-140111-0000_create_blog_posts/: up.sql
backend/migrations/2026-04-19-190000_add_excerpt_to_offers/: down.sql  up.sql
backend/migrations/2026-04-19-191000_rename_offer_description_to_content/: down.sql  up.sql
backend/migrations/2026-04-19-200000_create_admin_users/: up.sql
backend/migrations/2026-04-19-201000_create_admin_user_invites/: down.sql  up.sql
backend/migrations/2026-04-19-202000_create_emergency_banners/: down.sql  up.sql
backend/migrations/2026-04-19-203000_drop_admin_sessions/: down.sql
backend/migrations/2026-04-27-090000_rename_emergency_banners_to_banners/: down.sql  up.sql
backend/src/: config.rs  db.rs  error.rs  main.rs  models.rs  schema.rs  utils.rs
backend/src/routes/: admin.rs  contact.rs  mod.rs
backend/src/routes/admin/: archive.rs  auth.rs  banner.rs  blog.rs  messages.rs  mod.rs  offers.rs  users.rs
bcrypt-gen/: Cargo.toml
frontend/: .prettierrc.json  astro.config.mjs  package-lock.json  package.json  tsconfig.json
(+120 files in other folders)
