[package]
name = "backend"
version = "0.1.0"
edition = "2024"
description = "Rocket web backend for contact form and offers management"
license = "MIT"
repository = "https://github.com/yourusername/website-kerdik"
keywords = ["rocket", "rust", "web", "mysql", "backend"]
categories = ["web-programming"]

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.6", features = ["mysql", "r2d2", "chrono"] }
diesel_migrations = "2.1.0"
bcrypt = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
validator = { version = "0.16", features = ["derive"] }
thiserror = "1.0"

[dependencies.rocket_db_pools]
version = "0.2.0"
features = ["diesel_mysql"]
